Register new user.. Logout?

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,10 @@
     <div>
         <a href="register.html">Register</a>
     </div>
+    <div>
+        <a href="logout.html">Register</a>
+    </div>
+
 </body>
 <script>
     //This will wait from a call from the server
