--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
         <a href="register.html">Register</a>
     </div>
     <div>
-        <a href="logout.html">Register</a>
+        <a href="logout.html">Log out</a>
     </div>
 
 </body>
