Logging out works, added test (Covers 93.93)

--- a/public/logout.html
+++ b/public/logout.html
@@ -7,6 +7,9 @@
     <title>Log out</title>
 </head>
 <body>
-
+<h1>Log out</h1>
+<form action="/logout" method="post">
+    <div><button>Log Out</button></div>
+</form>
 </body>
 </html>
